k8s/base/digital-twin/visualisation.yaml
apiVersion: v1
kind: Service
metadata:
  name: visualisation
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: visualisation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualisation
spec:
  selector:
    matchLabels:
      app: visualisation
  template:
    metadata:
      labels:
        app: visualisation
    spec:
      containers:
        - name: visualisation
          image: ghcr.io/predictivemovement/telge-twin-visualisation:2.6.37 # {"$imagepolicy": "flux-system:visualisation"}
          resources:
            requests:
              cpu: 100m
              memory: "512Mi"
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualisation-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - tvilling-stage.telge.iteam.pub
      secretName: telge-stage-tls
  rules:
    - host: tvilling-stage.telge.iteam.pub
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: visualisation
                port:
                  number: 80
